<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/keyss_keyregister_sales_bg"
    android:orientation="vertical"
    android:weightSum="100" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/topstrip" >

            <DigitalClock
                android:id="@+id/digitalClock1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="72" >

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:background="@drawable/table_shape"
            android:stretchColumns="0,1"
            android:weightSum="100" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:text="@string/daily_report"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="50sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/total"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/totalamount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="right|center_vertical"
                    android:paddingRight="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <TextView
                    android:id="@+id/taxamounttv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/tax"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/taxamount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="right|center_vertical"
                    android:paddingRight="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/total_including_tax"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/netamount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="right|center_vertical"
                    android:paddingRight="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="10" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/cashtotal"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/cashamount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="right|center_vertical"
                    android:paddingRight="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/creditcard"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/cctotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="right|center_vertical"
                    android:paddingRight="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/check"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/checktotal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="right|center_vertical"
                    android:paddingRight="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="center_vertical|left"
                    android:paddingLeft="20dip"
                    android:text="@string/reward"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/rewardAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:gravity="right|center_vertical"
                    android:paddingRight="40dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="27sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textSize="40sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" >
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"            
            android:weightSum="20" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:gravity="center" >

                <Button
                    android:id="@+id/chartView"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="@string/chartview"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/backtoHome"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"                  
                    android:text="@string/back"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

    
    

</LinearLayout>